--- a/dotnet-identity-example/Web/appsettings.Development.json
+++ b/dotnet-identity-example/Web/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
-  "ConnectionStrings": {
-    "database": "Server= LAPTOP-19441AC2; database= IdentityDB; Trusted_Connection= true;"
-  },
+	"ConnectionStrings": {
+		"database": "Server= DESKTOP-CBALK4D\\SQLEXPRESS; database= IdentityDB; Trusted_Connection= true;"
+	},
 		"Logging": {
 			"IncludeScopes": false,
 			"LogLevel": {
