--- a/dotnet-identity-example/Web/Web.csproj
+++ b/dotnet-identity-example/Web/Web.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.0" />
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
+	<PackageReference Include="WebApiRouteDebugger" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
